[package]
name = "uwasm-toolbox"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# NCM decryption
aes = "0.9"
base64 = "0.22"
serde_json = "1"

# TGS decompression
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# TGS rendering (pure Rust Lottie rasterizer — tiny-skia backend, no C deps)
rasterlottie = { version = "0.2", default-features = false, features = ["images", "text"] }

# TGS GIF encoding
gif = "0.13"

# TGS WebP encoding — image-webp via image crate (pure Rust VP8L lossless)
image = { version = "0.25", default-features = false, features = ["webp"] }

# Shared serialization
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
